fix:Handle Exception for wrong username/password